...
                        calc.setTheme(isDark ? kLightTheme : kDarktTheme);
                        pref.setBool('isDark', !isDark);
                      });
                    },
                  ),
                  IconButton(
                      key: Key('history icon'),
                      icon: Icon(Icons.history),
                      onPressed: () {
                        calc.getHistory();
                        Navigator.push(
                            context,
                            MaterialPageRoute(
...
